# SwiftLight

./: Cargo.toml  README.md  TODO.md  check_modules.sh  complete_mod.rs  fix_all_files.py  fix_backend.py  fix_codegen_rs.py  fix_complete.py  fix_inkwell.py  fix_inkwell2.py  fix_missing_brackets.py  fix_missing_brackets_modeule.py  fix_mod_rs.py  fix_type_specialization.py  folder.bash  last_15_lines.txt  match_expr_completion.txt
.cursor/rules/: directorystructure.md  rule.mdc  specification.md  technologystack.md
crates/backups/: ast.rs.bak  async_await.rs.bak  build_plan.rs.bak  config.rs.bak  dataflow.rs.bak  dead_code_elimination.rs.bak  debug.rs.bak  error_handling.rs.bak  executor.rs.bak  grammar.rs.bak  hir.rs.bak  lifetime.rs.bak  logger.rs.bak  loop_optimization.rs.bak  module.rs.bak  name_resolution.rs.bak  optimization.rs.bak  pipeline.rs.bak  plugin_manager.rs.bak  riscv.rs.bak  target.rs.bak  token.rs.bak  traits.rs.bak  vectorization.rs.bak  x86.rs.bak
crates/backups/ast/: actor.rs.bak  analyzer.rs.bak  channel.rs.bak  dependency.rs.bak  dependent_type_checker.rs.bak  diagnostics.rs.bak  hash.rs.bak  inlining.rs.bak  intrinsics.rs.bak  lib.rs.bak  memory_tracker.rs.bak  optimization.rs.bak  options.rs.bak  ownership_checker.rs.bak  parallel.rs.bak  profiler.rs.bak  statement.rs.bak  type_specialization.rs.bak
crates/backups/manual/: codegen.rs.bak  codegen.rs.bak2  codegen.rs.bak3  codegen.rs.final.bak  codegen.rs.final1.bak  codegen_wasm.rs.final.bak  logger.rs.final.bak  mod.rs.bak  mod.rs.final.bak  mod.rs.gep.bak  mod.rs.gep2.bak  mod.rs.impl.bak  mod.rs.syntax.bak  parallel.rs.bak
crates/backups/syntax/: mod.rs.bak  name_resolver.rs.bak  type_checker.rs.bak
crates/swiftlight-cli/: Cargo.toml
crates/swiftlight-cli/src/: cli.rs  main.rs
crates/swiftlight-cli/templates/: gitignore  lib.sl  main.sl
crates/swiftlight-compiler/: Cargo.toml
crates/swiftlight-compiler/src/: config.rs  diagnostics.rs  lib.rs  optimization.rs  utils.rs
crates/swiftlight-compiler/src/backend/: analysis.rs  codegen.rs  codegen.rs.bak  debug.rs  intrinsics.rs  mod.rs  optimization.rs  target.rs  vectorization.rs
crates/swiftlight-compiler/src/backend/llvm/: codegen.rs  codegen.rs.bak-safe  mod.rs
crates/swiftlight-compiler/src/backend/native/: arm64.rs  mod.rs  riscv.rs  x86.rs  x86_64.rs  x86_64.rs.bsk
crates/swiftlight-compiler/src/backend/wasm/: codegen.rs  mod.rs
crates/swiftlight-compiler/src/driver/: cache.rs  compiler.rs  incremental.rs  mod.rs  module_manager.rs  options.rs
crates/swiftlight-compiler/src/frontend/: ast.rs  diagnostic.rs  error.rs  mod.rs  source_map.rs  syntax_highlight.rs
crates/swiftlight-compiler/src/frontend/lexer/: mod.rs  token.rs  unicode.rs
crates/swiftlight-compiler/src/frontend/parser/: ast.rs  declaration.rs  error.rs  error_recovery.rs  expression.rs  grammar.rs  mod.rs  statement.rs  types.rs
crates/swiftlight-compiler/src/frontend/semantic/: analyzer.rs  dependent_type_checker.rs  mod.rs  name_resolver.rs  ownership_checker.rs  scope.rs  symbol_table.rs  type_checker.rs
crates/swiftlight-compiler/src/lexer/: mod.rs
crates/swiftlight-compiler/src/middleend/: mod.rs
crates/swiftlight-compiler/src/middleend/analysis/: dataflow.rs  mod.rs
crates/swiftlight-compiler/src/middleend/concurrent/: actor.rs  async_await.rs  channel.rs  executor.rs  future.rs  mod.rs
crates/swiftlight-compiler/src/middleend/ir/: mod.rs  mod.rs.bak  mod.rs.bak.latest  mod.rs.bak3  mod.rs.bak4  mod.rs.final  mod.rs.final-bak  mod.rs.fixed1  mod.rs.pre_fix  mod.rs.temp  representation.rs
crates/swiftlight-compiler/src/middleend/optimization/: loop_optimization.rs  mod.rs  type_specialization.rs  type_specialization.rs.bak  vectorization.rs
crates/swiftlight-compiler/src/module/: dependency.rs  mod.rs
crates/swiftlight-compiler/src/parallel/: quantum.rs
crates/swiftlight-compiler/src/parser/: mod.rs
crates/swiftlight-compiler/src/typesystem/: checker.rs  constraints.rs  dependent.rs  effects.rs  higher_kinded.rs  inference.rs  linear.rs  mod.rs  ownership.rs  quantum.rs  smt.rs  temporal.rs  traits.rs  types.rs  unified_solver.rs
crates/swiftlight-compiler/src/utils/: config.rs  diagnostics.rs  file_system.rs  logger.rs  mod.rs  parallel.rs
crates/swiftlight-compiler/tests/: codegen_tests.rs  context_parser_tests.rs  ir_tests.rs  lexer_tests.rs  parser_tests.rs  syntax_highlight_tests.rs  type_system_tests.rs  typechecker_tests.rs
crates/swiftlight-debugger/: Cargo.toml
crates/swiftlight-debugger/src/: engine.rs  expression.pest  main.rs  protocol.rs
crates/swiftlight-formatter/: Cargo.toml
crates/swiftlight-fuzzer/: Cargo.toml
crates/swiftlight-lsp/: Cargo.toml
crates/swiftlight-lsp/src/: completion.rs  diagnostics.rs  main.rs  syntax_highlight.rs
crates/swiftlight-package-manager/: Cargo.toml
crates/swiftlight-package-manager/src/: build.rs  config.rs  dependency.rs  error.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  offline.rs  package.rs  registry.rs  security.rs  validation.rs  workspace.rs
crates/swiftlight-stdlib/: Cargo.toml
crates/swiftlight-stdlib/src/: lib.rs
crates/swiftlight-stdlib/src/core/: collections.rs  error.rs  iter.rs  memory.rs  mod.rs  types.rs
crates/swiftlight-stdlib/src/ffi/: mod.rs
crates/swiftlight-stdlib/src/gui/: mod.rs
crates/swiftlight-stdlib/src/math/: mod.rs
crates/swiftlight-stdlib/src/std/: mod.rs
examples/: quantum_temporal_sample.swl
examples/gui_sample/: Cargo.toml  counter.rs  main.rs
fix_scripts/: check_brackets.py  fix_additional_gep.py  fix_all_codegen_errors.py  fix_ast.py  fix_codegen.py  fix_codegen2.py  fix_codegen_direct.py  fix_final.py  fix_final_errors.py  fix_impl_brackets.py  fix_inkwell_api.py  fix_ir_mod.py  fix_last_errors.py  fix_logger_trait.py  fix_mod_rs_syntax.py  fix_optimization_trait.py  fix_struct_gep.py  fix_syntax_errors.py  fix_task_trait.py  fix_wasm_brackets.py
scripts/: bootstrap.sh  build.sh  release.sh
tools/analyzer/src/: analyzer.rs  config.rs  diagnostics.rs  main.rs  rules.rs
