[package]
name = "swiftlight-cli"
version = "0.1.0"
edition = "2021"
authors = ["SwiftLight開発チーム"]
description = "SwiftLight言語の公式コンパイラCLIツール"
license = "MIT"
repository = "https://github.com/swiftlight/swiftlight"

# コマンドラインアプリケーション
[[bin]]
name = "swiftlight"
path = "src/main.rs"

[dependencies]
# SwiftLightコンパイラライブラリ
swiftlight-compiler = { path = "../swiftlight-compiler", version = "0.1.0" }

# コマンドライン引数解析
clap = { version = "4.4", features = ["derive"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ出力
log = "0.4"
env_logger = "0.10"

# カラー表示
colored = "2.0"

# ファイル操作
walkdir = "2.3"
tempfile = "3.8"

# 進捗表示
indicatif = "0.17"

# TOML設定ファイル解析
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }

# 開発依存
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
