[package]
name = "swiftlight-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SwiftLight言語コンパイラ"

[dependencies]
# LLVM関連
inkwell = { workspace = true }
llvm-sys = { workspace = true }

# ユーティリティ
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }

# 標準ライブラリ
swiftlight-stdlib = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }
