[package]
name = "swiftlight-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SwiftLight言語コンパイラ"

[dependencies]
# LLVM関連
inkwell = { workspace = true }
llvm-sys = { workspace = true }

# 並行処理とスレッド安全性
parking_lot = "0.12.1"
dashmap = "5.5.3"
crossbeam-channel = "0.5.8"
memmap2 = "0.7.1"
rayon = "1.8.0"
num_cpus = "1.16.0"

# シリアライズ/デシリアライズ
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"

# ユーティリティ
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }

# 標準ライブラリ
swiftlight-stdlib = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }
