[package]
name = "swiftlight-package-manager"
version = "0.1.0"
edition = "2021"
authors = ["SwiftLight開発チーム"]
description = "SwiftLight言語のパッケージマネージャ"
license = "MIT"
repository = "https://github.com/swiftlight/swiftlight"

# コマンドラインアプリケーション
[[bin]]
name = "swiftlight-package"
path = "src/main.rs"

[dependencies]
# コマンドライン引数解析
clap = { version = "4.4", features = ["derive"] }

# エラーハンドリング
anyhow = "1.0"
thiserror = "1.0"

# ログ出力
log = "0.4"
env_logger = "0.10"

# カラー表示
colored = "2.0"

# ファイル操作
walkdir = "2.3"
dirs = "5.0"
glob = "0.3"

# TOML設定ファイル解析
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 時間関係
chrono = { version = "0.4", features = ["serde"] }

# 暗号化関連
ed25519-dalek = "1.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTPクライアント（パッケージレジストリと通信）
reqwest = { version = "0.11", features = ["json", "blocking"] }
url = "2.4"

# 非同期ランタイム
tokio = { version = "1.28", features = ["full"] }

# 圧縮
flate2 = "1.0"
tar = "0.4"

# セマンティックバージョニング
semver = "1.0"

# ライブラリ読み込み
libloading = "0.7"

# 開発依存
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
wiremock = "0.5"
