[package]
name = "swiftlight-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SwiftLight言語の標準ライブラリ"

[dependencies]
# ユーティリティ
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

# シリアライゼーション
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tempfile = { workspace = true }
